# aws-dataflow-simulator

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  cdk.json  config.yaml  dataflow_config.yaml  dataflow_config.yaml.example  pyproject.toml  template-config.yaml
aws_dataflow_simulator/: cli.py  config.py  streaming.py  utils_dataset.py  utils_kinesis.py  utils_rds.py  utils_s3.py
aws_dataflow_simulator/dataflow/: stream.py
csv_to_kinesis_stream/: csv_to_kinesis_stream_stack.py
lambda/: function.py
local-copy/: .dockerignore  Makefile  README.md  pyproject.toml
local-copy/src/: utils_s3.py
src/: config.py  exceptions.py  streaming.py  utils_kinesis.py  utils_s3.py
stacks/: batch_stack.py  s3_stack.py  streaming_stack.py
tests/: test_config.py
tests/unit/: test_csv_to_kinesis_stream_stack.py
