[tool.poetry]
name = "csv-to-kinesis-stream"
version = "0.1.0"
description = "Simulate AWS Kinesis data stream from your csv using AWS CDK, Fargate, Kinesis and S3"
authors = ["anastasiamkh <mlopsgeek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
constructs = ">=10.0.0,<11.0.0"
aws-cdk-lib = "2.151.0"
boto3 = "^1.34.159"
ruff = "^0.5.7"
fire = "^0.6.0"
pyyaml = "^6.0.2"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.1"
localstack = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
